tests/miniJava/neg/000210_mutation.MiniJava
class java { public static true Main ( String [ ] java ) { { } } }
